syntax = "proto3";

option csharp_namespace = "Mastodon.Grpc";

import "google/protobuf/timestamp.proto";

// Represents a custom user role that grants permissions.
message Role {
    // The ID of the Role in the database.
    string id = 1;

     // The name of the role.
    string name = 2;

     // The hex code assigned to this role. If no hex code is assigned, the string will be empty.
    string color = 3;

     // An index for the role’s position. The higher the position, the more priority the role has over other roles.
    optional int32 position = 4;

     // A bitmask that represents the sum of all permissions granted to the role.
    optional string permissions = 5;

     // Whether the role is publicly visible as a badge on user profiles.
    optional bool highlighted = 6;

     // The date that the role was created.
    optional google.protobuf.Timestamp createdAt = 7 [json_name="created_at"];

     // The date that the role was updated.
    optional google.protobuf.Timestamp updatedAt = 8 [json_name="updated_at"];
}
